fixed p cutting off gs

--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ button:focus, input[type=submit] {
 
 .todo-list li p {
 	margin: 5px 0 0 7px;
+	padding-bottom: 5px;
 }
 
 .todo-list li span {
